fixed z-index on hero ball link

--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -19,7 +19,7 @@
     position: absolute;
     right: 150px;
     bottom: 100px;
-    z-index: 999;
+    z-index: 800;
   }
 }
 
